<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.actia.drm.SettingsActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <Button
            android:id="@+id/btn_user"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp"
            android:text="@string/set_actia_user" />

        <Button
            android:id="@+id/btn_userSw"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38dp"
            android:text="@string/set_user" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_lic"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/validate_license" />

    <CheckBox
        android:id="@+id/check_all_licences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:text="@string/all_licenses"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/num_tokens_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="150dp"
            android:text="@string/number_tokens_validated"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stop_valid_lic"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="150dp"
            android:text="@string/stop_validation"
            android:visibility="invisible" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:baselineAligned="false">

        <ScrollView
            android:id="@+id/scrollToken"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="#4D4444"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/tokenView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4D4444"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tokens"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>

        <ListView
            android:id="@+id/list_licenses"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="0.6"
            android:background="@drawable/bgk_token_list"
            android:dividerHeight="3dip">

        </ListView>

    </LinearLayout>


</LinearLayout>
