<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graysoft"
    android:orientation="vertical"
    tools:context="com.actia.drm.auto_tokens.InfoTokensActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_token_size_topbar"
            android:background="@color/greenactia"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/info_tokens"
                    android:textColor="@color/white"
                    android:textSize="@dimen/info_token_textsize_header_title"
                    android:textStyle="bold|italic" />
                <Button
                    android:id="@+id/btnValidateAgain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tok_validar"
                    android:textSize="@dimen/info_token_textsize_header_title"
                    android:textStyle="bold|italic"

                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lblTokTotInfoTok"
                    style="@style/tv_infoTokens.number"/>
                <TextView
                    android:text="@string/tok_totales"
                    style="@style/tv_infoTokens.text"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblTokCorrectInfoTok"
                    style="@style/tv_infoTokens.number"/>

                <TextView
                    android:text="@string/tok_correct"
                    style="@style/tv_infoTokens.text"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblTokNotRegInfoTok"
                    style="@style/tv_infoTokens.number"/>

                <TextView
                    android:text="@string/tok_not_register"
                    style="@style/tv_infoTokens.text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblTokErrorInfoTok"
                    style="@style/tv_infoTokens.number"/>

                <TextView
                    android:text="@string/tok_error"
                    style="@style/tv_infoTokens.text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblStatusKeyInfoTok"
                    style="@style/tv_infoTokens.number"
                    android:textSize="20sp"/>

                <TextView
                    android:text="@string/tok_key"
                    style="@style/tv_infoTokens.text"/>

            </LinearLayout>


        </LinearLayout>

        <ListView
            android:id="@+id/lstTokensInfTok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_info_token"/>

    </LinearLayout>

</LinearLayout>
