<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.actia.menu_maintance.DialogInstallAPKActivity" >
    <ProgressBar android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/pb"
        />
    <ScrollView android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/install"
                android:id="@+id/install"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/unistall"
                android:id="@+id/uninstall"/>
            <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/btn_ok_dialoginstall"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>